...
    }
    
    private func setupAccessibility() {
        view.accessibilityIdentifier = "ExchangeRatesScreen"
        editBarButtonItem.accessibilityIdentifier = "editButton"
        doneBarButtonItem.accessibilityIdentifier = "doneButton"
        addBarButtonItem.accessibilityIdentifier = "addButton"
        errorView.accessibilityIdentifier = "errorView"
        emptyHintView.accessibilityIdentifier = "emptyHintView"
        tableView.accessibilityIdentifier = "ratesList"
    }

    private lazy var contentView: UIStackView = {
        let stackView = UIStackView(arrangedSubviews: [self.emptyHintView, self.tableView, self.errorView])
        stackView.axis = .vertical
        stackView.spacing = 0
...
